Fix issues with item tree row drag image
* Attachment icon being cut off due to box-sizing issue
* Twisty icon incorrect using color
* Dragged image being slightly wider than the item in the tree

--- a/scss/components/_item-tree.scss
+++ b/scss/components/_item-tree.scss
@@ -2,7 +2,7 @@
 
 #zotero-items-tree {
 
-	.virtualized-table-body {
+	.virtualized-table-body, .drag-image-container {
 		padding: 4px 8px;
 	}
 
@@ -53,7 +53,7 @@
 		}
 	}
 	
-	.virtualized-table {
+	.virtualized-table, .drag-image-container {
 		.row {
 			&.odd:not(.selected) {
 				background-color: var(--material-background);
